jobmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jobmanager
  name: jobmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobmanager
  strategy: {}
  template:
    metadata:
      labels:
        app: jobmanager
    spec:
      containers:
        - args:
            - standalone-job
            - -p
            - "1"
            - pinpoint-flink-job.jar
            - -spring.profiles.active
            - release
          image: pinpointdocker/pinpoint-flink:2.2.2
          name: pinpoint-flink-jobmanager
          ports:
            - containerPort: 8081
            - containerPort: 6123
          resources: {}
      restartPolicy: Always
status: {}
