pinpoint-hbase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pinpoint-hbase
  name: pinpoint-hbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinpoint-hbase
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pinpoint-hbase
    spec:
      containers:
        - image: pinpointdocker/pinpoint-hbase:2.2.2
          name: pinpoint-hbase
          ports:
            - containerPort: 60000
            - containerPort: 16010
            - containerPort: 60020
            - containerPort: 16030
          resources: {}
          volumeMounts:
            - mountPath: /home/pinpoint/hbase
              name: pinpoint-hbase-claim0
            - mountPath: /home/pinpoint/zookeeper
              name: pinpoint-hbase-claim1
      restartPolicy: Always
      volumes:
        - name: pinpoint-hbase-claim0
          persistentVolumeClaim:
            claimName: pinpoint-hbase-claim0
        - name: pinpoint-hbase-claim1
          persistentVolumeClaim:
            claimName: pinpoint-hbase-claim1
status: {}
