pinpoint-quickstart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pinpoint-quickstart
  name: pinpoint-quickstart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinpoint-quickstart
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pinpoint-quickstart
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -javaagent:/pinpoint-agent/pinpoint-bootstrap-2.2.2.jar -Dpinpoint.agentId=app-in-docker -Dpinpoint.applicationName=quickapp -Dpinpoint.profiler.profiles.active=release
          image: pinpointdocker/pinpoint-quickstart
          name: pinpoint-quickstart
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /pinpoint-agent
              name: data-volume
      restartPolicy: Always
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-volume
status: {}
