taskmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: taskmanager
  name: taskmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskmanager
  strategy: {}
  template:
    metadata:
      labels:
        app: taskmanager
    spec:
      containers:
        - args:
            - taskmanager
          image: pinpointdocker/pinpoint-flink:2.2.2
          name: pinpoint-flink-taskmanager
          ports:
            - containerPort: 6121
            - containerPort: 6122
            - containerPort: 19994
          resources: {}
      restartPolicy: Always
status: {}
