zoo1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zoo1
  name: zoo1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zoo1
  strategy: {}
  template:
    metadata:
      labels:
        app: zoo1
    spec:
      containers:
        - env:
            - name: ZOO_MY_ID
              value: "1"
            - name: ZOO_SERVERS
              value: server.1=0.0.0.0:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
          image: zookeeper:3.4
          name: zoo1
          ports:
            - containerPort: 2181
            - containerPort: 2888
            - containerPort: 3888
          resources: {}
      hostname: zoo1
      restartPolicy: Always
status: {}
