zoo3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zoo3
  name: zoo3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zoo3
  strategy: {}
  template:
    metadata:
      labels:
        app: zoo3
    spec:
      containers:
        - env:
            - name: ZOO_MY_ID
              value: "3"
            - name: ZOO_SERVERS
              value: server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=0.0.0.0:2888:3888
          image: zookeeper:3.4
          name: zoo3
          ports:
            - containerPort: 2181
            - containerPort: 2888
            - containerPort: 3888
          resources: {}
      hostname: zoo3
      restartPolicy: Always
status: {}
