jobmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: jobmanager
  name: jobmanager
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
    - name: "6123"
      port: 6123
      targetPort: 6123
  selector:
    io.kompose.service: jobmanager
status:
  loadBalancer: {}
