pinpoint-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: pinpoint-collector
  name: pinpoint-collector
spec:
  ports:
    - name: "9991"
      port: 9991
      targetPort: 9991
    - name: "9992"
      port: 9992
      targetPort: 9992
    - name: "9993"
      port: 9993
      targetPort: 9993
    - name: "9994"
      port: 9994
      targetPort: 9994
    - name: "9995"
      port: 9995
      targetPort: 9995
    - name: "9996"
      port: 9996
      targetPort: 9996
    - name: 9995-udp
      port: 9995
      protocol: UDP
      targetPort: 9995
    - name: 9996-udp
      port: 9996
      protocol: UDP
      targetPort: 9996
  selector:
    io.kompose.service: pinpoint-collector
status:
  loadBalancer: {}
