pinpoint-hbase-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: pinpoint-hbase
  name: pinpoint-hbase
spec:
  ports:
    - name: "60000"
      port: 60000
      targetPort: 60000
    - name: "16010"
      port: 16010
      targetPort: 16010
    - name: "60020"
      port: 60020
      targetPort: 60020
    - name: "16030"
      port: 16030
      targetPort: 16030
  selector:
    io.kompose.service: pinpoint-hbase
status:
  loadBalancer: {}
