pinpoint-quickstart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinpoint-quickstart
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8080
  selector:
    app: pinpoint-quickstart
status:
  loadBalancer: {}
