pinpoint-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinpoint-web
spec:
  ports:
    - name: "9997"
      port: 9997
      targetPort: 9997
    - name: "8079"
      port: 8079
      targetPort: 8080
  selector:
    app: pinpoint-web
status:
  loadBalancer: {}
