taskmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: taskmanager
  name: taskmanager
spec:
  ports:
    - name: "6121"
      port: 6121
      targetPort: 6121
    - name: "6122"
      port: 6122
      targetPort: 6122
    - name: "19994"
      port: 19994
      targetPort: 19994
  selector:
    io.kompose.service: taskmanager
status:
  loadBalancer: {}
