zoo3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zoo3
spec:
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
    - name: "2888"
      port: 2888
      targetPort: 2888
    - name: "3888"
      port: 3888
      targetPort: 3888
  selector:
    app: zoo3
status:
  loadBalancer: {}
